<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAspenDarkBlue"
    tools:context=".LoginActivity">


    <TextView
        android:id="@+id/app_name_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/colorAspenBrightBlue"
        android:textSize="70dp"
        android:layout_marginBottom="120dp"
        app:layout_constraintBottom_toTopOf="@id/txt_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/txt_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAspenBrightBlue"
        android:text="@string/login_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <EditText
        android:id="@+id/edt_login_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/EditTheme"
        android:textColor="@color/colorAspenBrightBlue"
        android:backgroundTint="@color/colorAspenBrightBlue"
        android:textCursorDrawable="@color/colorAspenBrightBlue"
        android:gravity="center"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/txt_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btn_login_ok"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:text="@string/login_btn_login"
        android:textSize="17dp"
        android:background="@color/colorAspenDarkGray"
        android:textColor="@color/colorAspenBrightBlue"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_login_password"
        />

    <Button
        android:id="@+id/biometric_login"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:text="@string/login_btn_biometric_login"
        android:textSize="17dp"
        android:textAlignment="center"
        android:padding="16dp"
        android:background="@color/colorAspenDarkGray"
        android:textColor="@color/colorAspenBrightBlue"
        app:layout_constraintTop_toBottomOf="@id/btn_login_ok"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:drawableLeft="@drawable/ic_fingerprint_black_24dp"

        />

</androidx.constraintlayout.widget.ConstraintLayout>