<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAspenDarkBlue"
    tools:context=".OpenSourceActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_opensource_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/colorAspenGray"
        android:padding="10dp"
        >
        <TextView
            android:id="@+id/txt_opensource_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/open_source_notice"
            android:textColor="@color/colorAspenBrightBlue"
            android:textSize="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <TextView
        android:id="@+id/txt_opensource_notice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textSize="13dp"
        android:textColor="@color/colorAspenBrightBlue"
        android:text="@string/open_source_contact_us"
        app:layout_constraintTop_toBottomOf="@id/layout_opensource_top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <TextView
        android:id="@+id/txt_opensource_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textIsSelectable="true"
        android:text="@string/open_source_developer_address"
        android:textColor="#0000FF"
        app:layout_constraintTop_toBottomOf="@id/txt_opensource_notice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        />
    <View
        android:id="@+id/line_opensource"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorAspenDarkGray"
        app:layout_constraintTop_toBottomOf="@id/txt_opensource_mail"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="15dp"
        />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcyl_opensource"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/line_opensource"
        app:layout_constraintStart_toStartOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>