<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@drawable/popup_back"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        tools:context=".PopupActivity">

        <TextView
            android:id="@+id/txt_popup_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/popup_txt_back"
            android:text="@string/popup_title"
            android:textColor="@color/colorAspenBrightBlue"
            android:textSize="17dp"
            android:padding="15dp"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
            android:id="@+id/txt_popup_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAspenDarkGray"
            android:gravity="center"
            android:textSize="17dp"
            android:background="@color/colorAspenBrightBlue"
            android:paddingTop="30dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="30dp"
            android:text="@string/popup_content"
            app:layout_constraintTop_toBottomOf="@id/txt_popup_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/edt_popup"
            />

        <EditText
            android:id="@+id/edt_popup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:backgroundTint="@color/colorAspenDarkGray"
            android:textColor="@color/colorAspenDarkGray"
            android:textCursorDrawable="@color/colorAspenDarkGray"
            app:layout_constraintBottom_toBottomOf="@id/txt_popup_info"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/line_popup"/>

        <View
            android:id="@+id/line_popup"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorAspenDarkGray"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@id/edt_popup"
            />
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/line_popup"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/popup_bottom_back"
            >
            <Button
                android:id="@+id/btn_popup_ok"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/colorAspenBrightBlue"
                android:textSize="15dp"
                android:text="@string/popup_btn_ok"
                android:textColor="@color/colorAspenBlue"
                style="?android:attr/borderlessButtonStyle"
                app:layout_constraintStart_toEndOf="@id/btn_popup_no"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
            <Button
                android:id="@+id/btn_popup_no"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/colorAspenBrightBlue"
                android:textSize="15dp"
                android:text="@string/popup_btn_cancle"
                style="?android:attr/borderlessButtonStyle"
                android:textColor="@color/colorAspenBlue"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btn_popup_ok"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>