<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorAspenDarkBlue"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_setting_top"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/colorAspenGray"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/txt_setting_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAspenBrightBlue"
            android:text="@string/setting_title"
            android:textSize="17dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_setting_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.9"
        android:background="@drawable/selector_setting_layout"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_setting_top"
        app:layout_goneMarginStart="10dp"
        >
        <ImageView
            android:id="@+id/img_setting_password"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:scaleType="fitXY"
            android:layout_marginTop="15dp"
            android:src="@drawable/key"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_goneMarginStart="10dp"/>
        <TextView
            android:id="@+id/txt_setting_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_change_password"
            android:textColor="@color/colorAspenBrightBlue"
            android:textSize="18dp"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toEndOf="@id/img_setting_password"
            app:layout_constraintTop_toTopOf="@id/img_setting_password"
            app:layout_constraintBottom_toBottomOf="@id/img_setting_password"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorAspenDarkGray"
            android:layout_marginTop="15dp"
            app:layout_constraintStart_toStartOf="@id/img_setting_password"
            app:layout_constraintTop_toBottomOf="@id/img_setting_password"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_setting_timer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.9"
        android:background="@drawable/selector_setting_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_setting_password"
        app:layout_goneMarginStart="10dp"
        >
        <ImageView
            android:id="@+id/img_setting_timer"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:scaleType="fitXY"
            android:layout_marginTop="15dp"
            android:src="@drawable/timer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_goneMarginStart="10dp"/>
        <TextView
            android:id="@+id/txt_setting_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_change_lock_timer"
            android:textColor="@color/colorAspenBrightBlue"
            android:textSize="17dp"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toEndOf="@id/img_setting_timer"
            app:layout_constraintTop_toTopOf="@id/img_setting_timer"
            app:layout_constraintBottom_toBottomOf="@id/img_setting_timer"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorAspenDarkGray"
            android:layout_marginTop="15dp"
            app:layout_constraintStart_toStartOf="@id/img_setting_timer"
            app:layout_constraintTop_toBottomOf="@id/img_setting_timer"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_setting_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.9"
        android:background="@drawable/selector_setting_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_setting_timer"
        app:layout_goneMarginStart="10dp"
        >
        <ImageView
            android:id="@+id/img_setting_address"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="15dp"
            android:scaleType="fitXY"
            android:src="@drawable/profile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_goneMarginStart="10dp"/>
        <TextView
            android:id="@+id/txt_setting_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_load_address_info"
            android:textColor="@color/colorAspenBrightBlue"
            android:textSize="17dp"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toEndOf="@id/img_setting_address"
            app:layout_constraintTop_toTopOf="@id/img_setting_address"
            app:layout_constraintBottom_toBottomOf="@id/img_setting_address"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorAspenDarkGray"
            android:layout_marginTop="15dp"
            app:layout_constraintStart_toStartOf="@id/img_setting_address"
            app:layout_constraintTop_toBottomOf="@id/img_setting_address"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_setting_opensource"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.9"
        android:background="@drawable/selector_setting_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_setting_address"
        app:layout_goneMarginStart="10dp"
        >
        <ImageView
            android:id="@+id/img_setting_opensource"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:scaleType="fitXY"
            android:layout_marginTop="15dp"
            android:src="@drawable/opensource"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_goneMarginStart="10dp"/>
        <TextView
            android:id="@+id/txt_setting_opensource"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_open_source_license"
            android:textColor="@color/colorAspenBrightBlue"
            android:textSize="17dp"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toEndOf="@id/img_setting_opensource"
            app:layout_constraintTop_toTopOf="@id/img_setting_opensource"
            app:layout_constraintBottom_toBottomOf="@id/img_setting_opensource"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorAspenDarkGray"
            android:layout_marginTop="15dp"
            app:layout_constraintStart_toStartOf="@id/img_setting_opensource"
            app:layout_constraintTop_toBottomOf="@id/img_setting_opensource"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_setting_help"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.9"
        android:background="@drawable/selector_setting_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_setting_opensource"
        app:layout_goneMarginStart="10dp"
        >
        <ImageView
            android:id="@+id/img_setting_help"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:scaleType="fitXY"
            android:layout_marginTop="15dp"
            android:src="@drawable/question"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_goneMarginStart="10dp"/>
        <TextView
            android:id="@+id/txt_setting_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_help"
            android:textColor="@color/colorAspenBrightBlue"
            android:textSize="17dp"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toEndOf="@id/img_setting_help"
            app:layout_constraintTop_toTopOf="@id/img_setting_help"
            app:layout_constraintBottom_toBottomOf="@id/img_setting_help"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorAspenDarkGray"
            android:layout_marginTop="15dp"
            app:layout_constraintStart_toStartOf="@id/img_setting_help"
            app:layout_constraintTop_toBottomOf="@id/img_setting_help"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>